# polygon

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/checkers/: CMakeLists.txt
src/generators/: CMakeLists.txt  main_generator.cpp
src/solutions/: CMakeLists.txt  main_correct_solution.cpp
src/validators/: CMakeLists.txt  main_validator.cpp
