project(polygon)

add_executable(acmp acmp.cpp)
set_target_properties(acmp PROPERTIES FOLDER "Checkers")

add_executable(caseicmp caseicmp.cpp)
set_target_properties(caseicmp PROPERTIES FOLDER "Checkers")

add_executable(casencmp casencmp.cpp)
set_target_properties(casencmp PROPERTIES FOLDER "Checkers")

add_executable(casewcmp casewcmp.cpp)
set_target_properties(casewcmp PROPERTIES FOLDER "Checkers")

add_executable(dcmp dcmp.cpp)
set_target_properties(dcmp PROPERTIES FOLDER "Checkers")

add_executable(fcmp fcmp.cpp)
set_target_properties(fcmp PROPERTIES FOLDER "Checkers")

add_executable(hcmp hcmp.cpp)
set_target_properties(hcmp PROPERTIES FOLDER "Checkers")

add_executable(icmp icmp.cpp)
set_target_properties(icmp PROPERTIES FOLDER "Checkers")

add_executable(lcmp lcmp.cpp)
set_target_properties(lcmp PROPERTIES FOLDER "Checkers")

add_executable(ncmp ncmp.cpp)
set_target_properties(ncmp PROPERTIES FOLDER "Checkers")

add_executable(nyesno nyesno.cpp)
set_target_properties(nyesno PROPERTIES FOLDER "Checkers")

add_executable(pointscmp pointscmp.cpp)
set_target_properties(pointscmp PROPERTIES FOLDER "Checkers")

add_executable(pointsinfo pointsinfo.cpp)
set_target_properties(pointsinfo PROPERTIES FOLDER "Checkers")

add_executable(rcmp rcmp.cpp)
set_target_properties(rcmp PROPERTIES FOLDER "Checkers")

add_executable(rcmp4 rcmp4.cpp)
set_target_properties(rcmp4 PROPERTIES FOLDER "Checkers")

add_executable(rcmp6 rcmp6.cpp)
set_target_properties(rcmp6 PROPERTIES FOLDER "Checkers")

add_executable(rcmp9 rcmp9.cpp)
set_target_properties(rcmp9 PROPERTIES FOLDER "Checkers")

add_executable(rncmp rncmp.cpp)
set_target_properties(rncmp PROPERTIES FOLDER "Checkers")

add_executable(uncmp uncmp.cpp)
set_target_properties(uncmp PROPERTIES FOLDER "Checkers")

add_executable(wcmp wcmp.cpp)
set_target_properties(wcmp PROPERTIES FOLDER "Checkers")

add_executable(yesno yesno.cpp)
set_target_properties(yesno PROPERTIES FOLDER "Checkers")

